--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -180,7 +180,9 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Maaleenhed/Hardware}
 \input{sektioner/maaleenhed/softwareS}
 \input{sektioner/maaleenhed/ADC}
+\input{sektioner/maaleenhed/UARTogTHD}
 \input{sektioner/Maaleenhed/SoftwareJeppe}
+\input{sektioner/Maaleenhed/Kalibrering}
 \chapter{Design af Styringsenhed}
 \input{sektioner/Styringsenhed/Indledning}
 \input{sektioner/Styringsenhed/Foranalyse}
