--- a/ProjektRapport/sektioner/Maaleenhed/ADC.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/ADC.tex
@@ -2,4 +2,4 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \subsubsection{Analog til digital konvertering}
-Måleenheden omsætter to analoge spændingssignaler til digitale værdier, som kan behandles af softwaren på PSOC. Denne konvertering foretages af en Delta Sigma Analog to Digital Converter (ADC), som er indstillet med en opløsning på 16bit og en samplefrekvens på 41,67kHz. Denne samplefrekvens er meget højere end minimumskravet på 500Hz jf. Shannons sample sætning. Med den samplefrekvens vil datamængden der skal behandles i Fourier transformation blive alt for stor. Derfor er samplefrekvensen nedsat, ved at indsætte et delay i koden efter hvert andet sample, se dokumentationen\footnote{Projektdokumentationen, 9.2.2, Analog til digital konvertering} for udregning af delayets størrelse. Med delayet er samplefrekvensen nedsat til 3,2kHz for hvert signal, hvilket svarer til 64 samples pr. periode af 50Hz signalet. Da der samples to signaler skiftevis vil ADC'ens reelle samplefrekvens være 6,4kHz, og der vil være en forsinkelse mellem samplingen af de to signaler. Ved beregning af power faktor, er der set bort fra denne forsinkelse, da det ikke har afgørende betydning for resultatet.  
+Måleenheden omsætter to analoge spændingssignaler til digitale værdier, som kan behandles af softwaren på PSOC. Denne konvertering foretages af en Delta Sigma Analog to Digital Converter (ADC), som er indstillet med en opløsning på 16bit og en samplefrekvens på 41,67kHz. Denne samplefrekvens er meget højere end minimumskravet på 500Hz jf. Shannons sample sætning. Med den samplefrekvens vil datamængden der skal behandles i Fourier transformation blive alt for stor. Derfor er samplefrekvensen nedsat, ved at indsætte et delay i koden efter hvert andet sample, se dokumentationen\footnote{Projektdokumentation, 9.2.2, Analog til digital konvertering} for udregning af delayets størrelse. Med delayet er samplefrekvensen nedsat til 3,2kHz for hvert signal, hvilket svarer til 64 samples pr. periode af 50Hz signalet. Da der samples to signaler skiftevis vil ADC'ens reelle samplefrekvens være 6,4kHz, og der vil være en forsinkelse mellem samplingen af de to signaler. Ved beregning af power faktor, er der set bort fra denne forsinkelse, da det ikke har afgørende betydning for resultatet.  
