--- a/ProjektRapport/sektioner/Maaleenhed/THD.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/THD.tex
@@ -2,6 +2,7 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Harmoniske svingninger}
+\label{sec:THD}
 Harmoniske svingninger i et elektrisk energisystem er spændinger og strømme, med højere frekvenser, som dannes af ulineære belastninger, som trækker strøm i korte pulser. Sådanne belastninger kan være strømforsyninger til elektroniske apparater, frekvensomformere og meget mere. Hvis indholdet af harmoniske svingninger i energisystemet bliver for stort, kan det resultere i varmeudvikling i elektrisk udstyr på nettet, og i værste tilfælde få udstyr til at fejle. \newline
 
 En ulineær belastning er kendetegnet ved at strømmen den trækker, i modsætning til en lineær, ikke følger den sinusformede spænding.  Som det ses af Figur \ref{fig:nonLinear} indeholder den røde kurve, som er ulineær, højere frekvenser end grundfrekvensen, som er repræsenteret med den blå kurve. 
