--- a/ProjektRapport/sektioner/Maaleenhed/SoftwareJeppe.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/SoftwareJeppe.tex
@@ -1,5 +1,5 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-
+\subsubsection{Fourier}
 
