--- a/ProjektRapport/sektioner/Maaleenhed/Hardware.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Hardware.tex
@@ -5,7 +5,7 @@
 I dette afsnit beskrives, hvordan Måleenheden er udviklet. Måleenheden er designet til at kunne måle strøm og spænding centralt og decentralt. Spændingen måles direkte mellem fase og nul, hvor strømmen måles, ved at måle spænding hen over en 1$\Omega$ modstand i serie med hver forbruger og transmissionslinje. 
 
 \subsection{Hardware}
-PSOC'ens sample område ligger mellem 0 og 5V, hvor signalet spændingen og strømmen forventes at svinge omkring 0V. Derfor skal er der udviklet hardware der kan hæve signalerne, så de svinger omkring 2,5V. Måleenheden skal kunne måle op til 8V, så derfor har det været nødvendigt at dæmpe spændings signalet. Strøm niveauet er tilgengæld ret småt, hvor vi derfor gerne vil forstærke det. På figurer \ref{fig:MaalHardware} ses diagrammet for hardwaren. Det er valgt at bruge operations forstærkeren AD823, da den kan forsynes med 5Vdc og udnytte hele dens forsyningsspændings område.  
+PSOC'ens sample område ligger mellem 0 og 5V, hvor signalerne til spændingen og strømmen forventes at svinge omkring 0V. Derfor er der udviklet hardware der kan hæve signalerne til at svinge omkring 2,5V. Måleenheden skal kunne måle op til 8V, så derfor har det været nødvendigt at dæmpe spændings signalet. Strøm niveauet er tilgengæld meget lille, hvor vi derfor gerne vil forstærke det. På figurer \ref{fig:MaalHardware} ses diagrammet for hardwaren. Det er valgt at bruge operations forstærkeren AD823, da den kan forsynes med 5Vdc og udnytte hele dens forsyningsspændings område.  
 
 \begin{figure}[htbp] % (alternativt [H])
 	\centering
@@ -20,7 +20,7 @@ Da det er 8V rms, skal det ganges op for at få hele signalet med.
 Vpp = 8V*\sqrt{2} = 11,3Vpp
 \end{align}
 
-Den mindste dæmpning for at signaler holder sig inden for 0 - 5V skal derfor være:
+Den mindste dæmpning der kan laves for at signalerne holder sig inden for 0 - 5V skal derfor være:
 
 \begin{align}
 min_{daemp} = \dfrac{11.3}{5} = 2,26 gange
@@ -30,7 +30,7 @@ Dette ses realiseret vha. modstand R1 og R2.
 
 \subsubsection{Strømmåling}
 
-Da  den maksimale strøm er 500mA rms vil det give en peak to peak værdig på:
+Da  den maksimale strøm er 500mA rms vil det give en peak to peak værdi på:
 
 \begin{align}
 Ipp = 0,5*\sqrt{2} = 0,71A
