oprettelse af modult og kk

--- a/ProjektRapport/sektioner/Trinskifter.tex
+++ b/ProjektRapport/sektioner/Trinskifter.tex
@@ -27,7 +27,7 @@ Trinskifter består af trintransformer og relækredsløb. På figur \ref{fig:Tri
 	\label{fig:Trinskift}
 \end{figure}
 
-Det ses hvorledes hvert trin på transformeren er tilkoblet hvert kontaktrelæ. Gennem PLC styresignalet tilkobles ønsket trin. For at skifte mellem hvert trin, sluttes både aktuelle og ønsket trin. Efter to sekunder slår det aktuelle trin fra og dermed bliver det ønsket trin det aktuelle trin. Dette er muligt grundet opbygning af trintransformerens viklinger på sekundærside. 
+Det ses hvorledes hvert trin på transformeren er tilkoblet hvert kontaktrelæ. Gennem PLC styresignalet tilkobles ønsket trin. Eksempelvis for at skifte fra trin 4 til trin 5, sluttes trin 4 og trin 5. Efter to sekunder, slås trin 4 fra og dermed bliver trin 5 det gældende trin. På denne måde sikres det at forsyningen til systemet er konstant.  
 
 
 
