--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -174,6 +174,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Distributionslinje}
 \input{sektioner/Belastning}
 \input{sektioner/Trinskifter}
+\input{sektioner/Modultest}
+\input{sektioner/Delkonklusion}
 \chapter{Måleenhed}
 \input{sektioner/Maaleenhed/Foranalyse}
 \input{sektioner/Maaleenhed/THD}
