--- a/ProjektRapport/bibfil.bib
+++ b/ProjektRapport/bibfil.bib
@@ -70,6 +70,11 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	Urldate = {2017-05-23}}	
 =======
 
+@online{Ethernet,
+	Title = {Arduino Ethernet.h library},
+	Url = {https://www.arduino.cc/en/reference/ethernet},
+	Urldate = {2017-04-13}}
+
 
 @online{HarmoniskeVideo,
 	Date-Modified = {2017-05-23 00:00:00 +0000},
