--- a/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
@@ -1,2 +1,7 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
+
+
+\subsection{Brugergrænseflade}
+
+Brugergrænsefladen i dette projekt er lavet på en HMI 
