--- a/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
@@ -58,3 +58,4 @@ I første udkast til blokken var ikke taget højde for at programmet blev ekseve
 
 
 En vigtig pointe at få med er at forbrugeren aldrig må miste forsyning. Så et trinskift indebærer et overlap imellem de trin der skiftes fra og til på 2 sekunder. Herved er der altid forsyning på distributionslinje. Selve overlappet set fra trintransformeren uddybes i afsnit !!!Trintransformer trinskift!!!.
+For mere om styringen af trinskifteren, se dokumentationen.\footnote{Projektdokumentation, 10.1.2, Styring af trinskifteren.}
