--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -185,6 +185,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Maaleenhed/SoftwareJeppe}
 \input{sektioner/maaleenhed/UARTogTHD}
 \input{sektioner/Maaleenhed/Kalibrering}
+\input{sektioner/Maaleenhed/Modultest}
 \input{sektioner/Maaleenhed/Delkonklusion}
 \chapter{Design af Styringsenhed}
 \input{sektioner/Styringsenhed/Indledning}
