--- a/ProjektRapport/sektioner/Maaleenhed/Hardware.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Hardware.tex
@@ -39,7 +39,7 @@ Ipp = 0,5*\sqrt{2} = 0,71A
 Hvilket betyder den maks. må forstærkes med:
 
 \begin{align}
-maks\_forstaerkning = \dfrac{5}{0,71} = 7
+maks_{forstaerkning} = \dfrac{5}{0,71} = 7
 \end{align}
 Denne forstærkning ses realiseret vha. modstand R7 og R8.  
 
