Delkonklusion plus små rettelser

--- a/ProjektRapport/sektioner/Belastning.tex
+++ b/ProjektRapport/sektioner/Belastning.tex
@@ -2,7 +2,7 @@
 
 \section{Belastning}
 
-Til simulering af forbrugere i systemet er ohmske belastninger benyttet. Modstandsværdierne for disse er valgt i intervallet 16$\Omega$ til 100$\Omega$, da disse vil give tilstrækkeligt spændingsfald, $\pm$10$\%$ af 4V, til at medføre trinskift\footnote{Projektdokumentation, 8.2.1, Beregning af Belastning}. 
+Til simulering af forbrugere i systemet er ohmske belastninger benyttet. Modstandsværdierne for disse er valgt i intervallet 16$\Omega$ til 100$\Omega$, da det er beregnet og simuleret, at disse vil give tilstrækkeligt spændingsfald, $\pm$10$\%$ af 4V, til at medføre trinskift\footnote{Projektdokumentation, 8.2.1, Beregning af Belastning}. 
 
 \subsection{Design og implementering}
 
