--- a/ProjektRapport/sektioner/Delkonklusion.tex
+++ b/ProjektRapport/sektioner/Delkonklusion.tex
@@ -3,3 +3,5 @@
 
 \section{Delkonklusion}
 
+I dette afsnit er overvejelser omkring udvikling, design og implementering af Distributionslinje, belastning og Trinskifter blevet beskrevet. Der er implementeret en simulering af en 60 km lang distributionslinje med modstand- og spolevirkning, der påvirker spændingsfald og power factor i systemet. Ligeledes er der implementeret belastninger, der kan til- og frakobles for at variere spændingsfaldet over disse. Endeligt er der implementeret en trinskifter i form af en trintransformer og et relækredsløb til skift af trin. På baggrund af modultest kan det konkluderes, at disse enheder giver mulighed for at lave det ønskede proof of concept.
+
