--- a/ProjektRapport/sektioner/Distributionslinje.tex
+++ b/ProjektRapport/sektioner/Distributionslinje.tex
@@ -14,3 +14,5 @@ På baggrund af de valgte kabelparametre og tilgængelige komponenter, er simule
 	\caption{Færdigt print med Distributionslinje}
 	\label{fig:DisbLinje}
 \end{figure}
+
+På baggrund af Distributionslinjens parametre forventes en påvirkning af bl.a. systemets power factor. Denne er derfor blevet beregnet og simuleret for senere at kunne sammenligne disse værdier med de målte værdier \footnote{Projektdokumentation, 8.3, power factor samt 8.5.2, modultest}. 
