Lille rettelse modultesttabel

--- a/ProjektDokumentation/sektioner/Trinskifter/Modultest.tex
+++ b/ProjektDokumentation/sektioner/Trinskifter/Modultest.tex
@@ -12,19 +12,18 @@ For at tjekke, at distributionslinjen og de forskellige belastninger giver det s
 		\hline
 		\textbf{Trin} & \textbf{Belastning} & \textbf{Forventet resultat} & \textbf{Resultat} \\\hline
 		
-		\multirow{6}{*}{4 V AC} 
+		\multirow{5}{*}{4 V AC} 
 		& $50 \Omega\parallel 50 \Omega$ & 3,2 V AC over belastning & 2,9 V AC målt over belastning \\\hhline{~---} 	
 		& $50 \Omega\parallel 16 \Omega$ & 2,6 V AC over belastning & 2,0 V AC målt over belastning \\\hhline{~---}
-		& $54 \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hhline{~---} 
+		& $54 \Omega$ & 3,58 V AC over belastning & 3,38 V AC målt over belastning \\\hhline{~---} 
 		& $50 \Omega$ & 3,6 V AC over belastning & 3,5 V AC målt over belastning \\\hhline{~---} 	
 		& $39 \Omega$ & 3,5 V AC over belastning & 3,4 V AC målt over belastning \\\hhline{~---} 
 		& $16 \Omega$ & 2,8 V AC over belastning & 2,5 V AC målt over belastning \\\hline 
 	
 		
-		\multirow{6}{*}{5 V AC} 
+		\multirow{5}{*}{5 V AC} 
 		& $50 \Omega\parallel 50 \Omega$ & 4,0 V AC over belastning & 3,7 V AC målt over belastning \\\hhline{~---} 	
-		& $50 \Omega\parallel 16 \Omega$ & 3,22 V AC over belastning & 2,76 V AC målt over belastning \\\hhline{~---}
-		& $54 \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hhline{~---} 
+		& $50 \Omega\parallel 16 \Omega$ & 3,22 V AC over belastning & 2,76 V AC målt over belastning \\\hhline{~---} 
 		& $50 \Omega$ & 4,4 V AC over belastning & 4,6 V AC målt over belastning \\\hhline{~---} 	
 		& $39 \Omega$ & 4,3 V AC over belastning & 4,2 V AC målt over belastning \\\hhline{~---} 
 		& $16 \Omega$ & 3,5 V AC over belastning & 3,1 V AC målt over belastning \\\hline
@@ -46,7 +45,7 @@ For at teste at systemet virker som ønsket, laves en sammenligning af forvented
 		\hline
 		\textbf{Trin} & \textbf{Belastning} & \textbf{Simulering} & \textbf{Målt værdi} \\\hline
 		
-		\multirow{6}{*}{4 V AC} 
+		\multirow{3}{*}{4 V AC} 
 	
 		& $54 \Omega$ & 0,997 &  0,999\\\hhline{~---} 
 		& $50 \Omega$ &0,997  &  0,999\\\hhline{~---} 	
@@ -54,7 +53,7 @@ For at teste at systemet virker som ønsket, laves en sammenligning af forvented
 		& $16 \Omega$ & 0,982 &  0,999\\\hline 
 		
 		
-		\multirow{6}{*}{5 V AC} 
+		\multirow{3}{*}{5 V AC} 
 	
 		& $54 \Omega$ & 0,997 & 0,999 \\\hhline{~---} 
 		& $50 \Omega$ & 0,997 & 0,999 \\\hhline{~---} 	
