Metode og process

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -199,6 +199,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Accepttest}
 \chapter{Resultat og Diskussion}
 \chapter{Metode og proces}
+\input{sektioner/MetodeOgProcess}
 \chapter{Fremtidigt arbejde}
 \chapter{Perspektivering}
 \chapter{Konklusion}
