--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -193,6 +193,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Styringsenhed/Kontrolmodul}
 \input{sektioner/Styringsenhed/Brugergraenseflade}
 \input{sektioner/Styringsenhed/Kommunikationsmodul}
+\input{sektioner/Styringsenhed/Test}
 \input{sektioner/Styringsenhed/Delkonklusion}
 \chapter{Integrationstest}
 \chapter{Accepttest}
