filer til fremtidigt arbejde

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -202,6 +202,9 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Metode og proces}
 \input{sektioner/MetodeOgProcess}
 \chapter{Fremtidigt arbejde}
+\input{sektioner/FremtidigtArbejde/Distributionslinje}
+\input{sektioner/FremtidigtArbejde/Maale}
+\input{sektioner/FremtidigtArbejde/Styringsenhed}
 \chapter{Perspektivering}
 \chapter{Konklusion}
 
