--- a/ProjektRapport/sektioner/Maaleenhed/Hardware.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Hardware.tex
@@ -6,7 +6,7 @@ I dette afsnit beskrives, hvordan Måleenheden er udviklet. Måleenheden er desi
 
 \subsection{Hardware}
 
-Under udviklingen af hardwaren har det vist sig at det ikke kunne måle differentielt mellem to tilfældige punkter, men at det kun kan måles mellem et punkt og stel forbindelse. Dette gav ikke noget problem iht. målingen ved forbrugerne, men det betød der ikke kunne måles centralt ved den viste opstilling på figur \ref{fig:MaalForanalyse}. Dette blev løst ved at flytte 1$\Omega$ modstanden ned til N, som vist på figur \ref{fig:MaalAktuel}
+Under udviklingen af hardwaren har det vist sig at det ikke kunne måle differentielt mellem to tilfældige punkter, men at det kun kan måles mellem et punkt og stel forbindelse. Dette gav ikke noget problem iht. målingen ved forbrugerne, men det betød der ikke kunne måles centralt ved den viste opstilling på figur \ref{fig:MaalForanalyse}. Dette blev løst ved at flytte 1$\Omega$ modstanden ned til N, som vist på figur \ref{fig:MaalAktuel}.
 
 \begin{figure}[H] % (alternativt [H])
 	\centering
