--- a/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
@@ -37,7 +37,10 @@ Da systemet ikke er et beskyttelsessystem, kræver det ikke hurtig reaktion mell
 	\label{fig:ValgAfEnhedSend}
 \end{figure}
 
-FC'er er valgt da tanken var at hukommelsen skulle ligge andetsteds i koden. Det er dog blevet nødvendigt at oprette en global DB, for kunne styre variable i forbindelse med styring af koommunikationen. For yderlige uddybelse, se dokumentationen\footnote{Projektdokumentation, 10.1.1, TCP kommunikation}.
+FC'er er valgt da tanken var at hukommelsen skulle ligge andetsteds i koden. Det er dog blevet nødvendigt at oprette en global DB, for kunne styre variable i forbindelse med styring af kommunikationen. For yderlige uddybelse, se dokumentationen\footnote{Projektdokumentation, 10.1.1, TCP kommunikation}.
+
+
+Det er vigtigt at pointere at systemet skal være nemt at udvide til at understøtte mange Måleenheder i den virkelige verden. Det vil udvide tiden det tager at eksekvere programmet, men er nemt da der ikke skal ændres i selve kommunikationen, men kun i de netværk der styrer kommunikationen, hvor der her skal tilføjes flere forgreninger.
 
 \subsection{Styring af Trinskifter}
 
